\figure \captionsetup{type=table}
Kan bruges i stedet for alm. table.

--- a/Rapport/content/Mikrocontroller.tex
+++ b/Rapport/content/Mikrocontroller.tex
@@ -136,7 +136,8 @@ Fjernelse af implementerede funktioner for at gøre det simpelt har ikke været 
 De primære funktioner er at sætte en position eller starte tracking af lerduen.
 Hvis det indtastede ikke bliver genkendt bliver en liste over gyldige funktioner udskrevet.
 
-\begin{table}[h!]
+\begin{figure}[th!]
+\centering
 \begin{tabular}{l|l|l}
 Kommando: & Funktion: & Parametre: \\\hline 
 read & Slå log til eller fra.  &   \\\hline 
@@ -163,9 +164,10 @@ Pmfxx & Sæt dutycycle for motor m & m = Motor ("A" ell. "B"), \\
 %  & & f = fortegn ($+$ ell. $-$),  \\
 %  & & xx = PWM dutycycle i \%\\\hline 
 %\end{tabular} 
+\captionsetup{type=table}
 \caption{Viser UART-interfacets kommandoer.}
 \label{tb:uart_interface}
-\end{table}
+\end{figure}
 
 
 
