--- a/Rapport/content/Mikrocontroller.tex
+++ b/Rapport/content/Mikrocontroller.tex
@@ -239,39 +239,27 @@ Motor (1 bit) &Retning (1 bit) & Ignore PWM (1 bit)& N/A (2 bit) & PWM duty cycl
 %\begin{figure}[h!]
 %\centering
 %\subfloat[Mikrocontroller til FPGA.\label{fig:spi_to_fpga}]{%
-%\begin{tabular}{|p{4cm}|}
- %   \hline
- %   Motor (1 bit) \\
- %   \hline
- %   Retning (1 bit) \\
- %   \hline
-%    Ignore PWM (1 bit) \\
-%    \hline
+%\begin{tabular}{|p{4cm}|}   \hline
+ %   Motor (1 bit) \\   \hline
+ %   Retning (1 bit) \\   \hline
+%    Ignore PWM (1 bit) \\    \hline
 %    N/A (2 bit) \\
- %    \\
-  %  \hline
+ %    \\\hline
  %    \\ \\ \\ \\
  %   PWM duty cycle \\
- %   (11 bits) \\ \\ \\ \\ \\
- %   \hline
-%  \end{tabular}
-%}
+ %   (11 bits) \\ \\ \\ \\ \\   \hline
+%  \end{tabular}}
 %\qquad
 %\subfloat[FPGA til Mikrocontroller. Der skiftes mellem at sende position for pan og tilt hver gang.
 %\label{fig:spi_from_fpga}]{%
-%\begin{tabular}{|p{4cm}|}
- %   \hline
-  %  Motor (1 bit) \\
-%    \hline \\
+%\begin{tabular}{|p{4cm}|} \hline
+  %  Motor (1 bit) \\    \hline \\
 %    N/A (4 bit) \\
-%     \\ \\
-%    \hline
+%     \\ \\    \hline
 %     \\ \\ \\ \\
 %    Position (ticks) \\
-%    (11 bits) \\ \\ \\ \\ \\
-%    \hline
-%  \end{tabular}
-%}
+%    (11 bits) \\ \\ \\ \\ \\    \hline
+%  \end{tabular}}
 %\caption[Indholdet af SPI datawords]{Viser indholdet af SPI datawords. }
 %\label{fig:protokol1}
 %\end{figure}
