Intro er rettet.

--- a/Rapport/content/systemidentification.tex
+++ b/Rapport/content/systemidentification.tex
@@ -1,5 +1,5 @@
 \part{System identifikation}
-I Del II gennemgås den teoretiske udredning af systemet. Denne del lægger vægt på den matematiske model af PTS, hvorefter transferfunktionerne bliver diskretiseret således at de kan anvendes i det diskrete domæne. Ydermere beskrives hvilken proces, der benyttes til at designe regulatoren.
+Denne del gennemgås den teoretiske udredning af systemet. Denne del lægger vægt på den matematiske model af PTS, hvorefter transferfunktionerne bliver diskretiseret således at de kan anvendes i det diskrete domæne. Ydermere beskrives hvilken proces, der benyttes til at designe regulatoren.
 Afslutningsvis beskrives koordinattransformationen fra kartesisk til sfærisk
 
 \input{./content/PTS}
