--- a/Rapport/content/application.tex
+++ b/Rapport/content/application.tex
@@ -3,7 +3,7 @@
 \pagenumbering{arabic}
 \setcounter{page}{1}
 \part{Applikation}
-I Del I af rapporten beskrives i hvilken sammenhæng Pan \& Tilt Systemet (PTS) 
+I denne del af rapporten beskrives i hvilken sammenhæng Pan \& Tilt Systemet (PTS) 
 ønskes brugt. Situationen analyseres og krav til systemet fastlægges. Sidst 
 gives et overblik over det samlede projekt samt opdelingen af opgaver.
 
