Figur ordnet.. Håber du bryder dig om den Michael :)

--- a/Rapport/content/preamble.tex
+++ b/Rapport/content/preamble.tex
@@ -43,6 +43,7 @@
 \usepackage{tikz}
 \usetikzlibrary{shapes,arrows,chains, scopes}
 \usepackage{pgfplots}
+\usepackage{tabu}
 
 \pgfplotsset{compat=1.8} % Burde være understøttet på alle maskiner.
 \usepackage[americanvoltages, americancurrents, americanresistors, americaninductors, smartlabels]{circuitikz}
