--- a/Rapport/content/Mikrocontroller.tex
+++ b/Rapport/content/Mikrocontroller.tex
@@ -65,24 +65,24 @@ De fire mulige skeduleringer er beskrevet i tabel \ref{tb:os_comparison}.
 Til valget er der lagt vægt på om skeduleringen opfylder kravet til realtidsafvikling af regulatorerne, samt muligheden for at genanvende elementer fra EMP-kurset.
 \begin{figure}[th!]
 \centering
-\begin{tabular}{l|l|l|l|l}
- & coOS & freeRTOS & RTCS & Super loop \\ \hline 
+\begin{tabu}{l|[2pt]l|l|l|l}
+ & coOS & freeRTOS & RTCS & Super loop \\ \tabucline[2pt]{-}
 Skedulering & Preemptive priority  & Preemptive priority  & Non-preemptive & Non-preemptive  \\ 
 	           & /round robin		& /round robin              & &	\\\hline 
 Queues & Ja & Ja & Nej & Nej \\ \hline 
 Semaphore & Counting og Binære  & Counting og Binære & Binære  & Nej  \\\hline 
 Introduceret & Nej & Ja & Ja & Ja \\ 
 i EMP kurset &   &   &   &   \\
-\end{tabular}
-%\begin{tabular}{|l|l|l|l|l|}\hline 
-% & coOS & freeRTOS & RTCS & Super loop \\ \hline 
+\end{tabu}
+%\begin{tabu}{|l|[2pt]l|l|l|l|}\hline
+% & coOS & freeRTOS & RTCS & Super loop \\ \tabucline[2pt]{-}
 %Skedulering & Preemptive priority  & Preemptive priority  & Non-preemptive & Non-preemptive  \\ 
-%			& /round robin		&	/round robin & &	\\\hline 
+%	           & /round robin		& /round robin              & &	\\\hline 
 %Queues & Ja & Ja & Nej & Nej \\ \hline 
 %Semaphore & Counting og Binære  & Counting og Binære & Binære  & Nej  \\\hline 
 %Introduceret & Nej & Ja & Ja & Ja \\ 
-%i EMP kurset &   &   &   &   \\\hline 
-%\end{tabular}
+%i EMP kurset &   &   &   &   \\\hline
+%\end{tabu}
 \captionsetup{type=table}
 \caption{Specifikationer for de undersøgte systemer}
 \label{tb:os_comparison}
@@ -142,8 +142,8 @@ Hvis det indtastede ikke bliver genkendt bliver en liste over gyldige funktioner
 
 \begin{figure}[th!]
 \centering
-\begin{tabular}{l|l|l}
-Kommando: & Funktion: & Parametre: \\\hline 
+\begin{tabu}{l|[2pt]l|l}
+Kommando: & Funktion: & Parametre: \\\tabucline[2pt]{-}
 read & Slå log til eller fra.  &   \\\hline 
 start & Start tracking af lerdue &   \\\hline 
 stop & Stop systemet &   \\\hline 
@@ -154,20 +154,21 @@ A aaaa.bbbb & Gå til sfærisk koord.  & a = Tilt, b = Pan, begge i ticks. \\\hl
 Pmfxx & Sæt dutycycle for motor m & m = Motor ("A" ell. "B"), \\ 
 & & f = fortegn ($+$ ell. $-$),  \\
 & & xx = PWM dutycycle i \%
-\end{tabular} 
-%\begin{tabular}{|l|l|l|}\hline 
-%Kommando: & Funktion: & Parametre: \\ \hline 
-%read & Slå log til eller fra.  &   \\ \hline 
-%start & Start tracking af lerdue &   \\ \hline 
-%stop & Stop systemet &   \\ \hline 
-%open & Start åben sløjfe test &   \\ \hline 
-%reset & Gå til udgangsposition &   \\ \hline 
-%C xxx.yyy.zzz & Gå til  kartesisk koord. (x,y,z) & x,y,z = Koordinaterne i meter \\ \hline 
-%A aaaa.bbbb & Gå til sfærisk koord.  & a = Tilt, b = Pan, begge i ticks. \\ \hline 
+\end{tabu} 
+
+%\begin{tabu}{|l|[2pt]l|l|}\hline
+%Kommando: & Funktion: & Parametre: \\\tabucline[2pt]{-}
+%read & Slå log til eller fra.  &   \\\hline 
+%start & Start tracking af lerdue &   \\\hline 
+%stop & Stop systemet &   \\\hline 
+%open & Start åben sløjfe test &  \\\hline  
+%reset & Gå til udgangsposition &   \\\hline 
+%C xxx.yyy.zzz & Gå til  kartesisk koord. (x,y,z) & x,y,z = Koordinaterne i meter \\\hline 
+%A aaaa.bbbb & Gå til sfærisk koord.  & a = Tilt, b = Pan, begge i ticks. \\\hline  
 %Pmfxx & Sæt dutycycle for motor m & m = Motor ("A" ell. "B"), \\ 
-%  & & f = fortegn ($+$ ell. $-$),  \\
-%  & & xx = PWM dutycycle i \%\\\hline 
-%\end{tabular} 
+%& & f = fortegn ($+$ ell. $-$),  \\
+%& & xx = PWM dutycycle i \%\\\hline
+%\end{tabu} 
 \captionsetup{type=table}
 \caption{Viser UART-interfacets kommandoer.}
 \label{tb:uart_interface}
@@ -216,19 +217,21 @@ Freescale formatet blev udelukket da opsætningen af denne var mere kompliceret 
 
 Størrelse af data framen blev valgt til 16 bit, hvilket giver mulighed for at sende motorens hastighed og deres position (begge 11 bit) samt kontroldata. Opbygningen af de to datawords kan ses på figur \ref{fig:protokol1}.
 
+
+
 \begin{figure}[h!]
 \centering
 \subfloat[Mikrocontroller til FPGA.\label{fig:spi_to_fpga}]{%
-\begin{tabular}{c|c|c|c|c}
-Motor (1 bit) &Retning (1 bit) & Ignore PWM (1 bit)& N/A (2 bit) & PWM duty cycle (11 bit)
-\end{tabular}
+\begin{tikzpicture}[scale=1]
+\include*{./graphics/SPImasterslave}
+\end{tikzpicture}
 }
 \qquad
 \subfloat[FPGA til Mikrocontroller. Der skiftes mellem at sende position for pan og tilt hver gang.
 \label{fig:spi_from_fpga}]{%
- \begin{tabular}{c|c|c}
- Motor (1 bit) & N/A (4 bit)  & PWM duty cycle (11 bit)
- \end{tabular}
+\begin{tikzpicture}[scale=1]
+\include*{./graphics/SPIslavemaster}
+\end{tikzpicture}
 }
 \caption[Indholdet af SPI datawords]{Viser indholdet af SPI datawords. }
 \label{fig:protokol1}
@@ -262,10 +265,6 @@ Motor (1 bit) &Retning (1 bit) & Ignore PWM (1 bit)& N/A (2 bit) & PWM duty cycl
 %\caption[Indholdet af SPI datawords]{Viser indholdet af SPI datawords. }
 %\label{fig:protokol1}
 %\end{figure}
-\todo[inline, author=Anders]{Todo er rettet, men jeg synes personligt den anden noteringsformat er pænere. Det sere "lettere" ud og fylder mindre.}
-\todo[inline, author=Michael]{Var sådan set blevet enige med Mikkel, Åse og Nikolaj om at bruge de høje figurer... GRR! }
-\todo[inline, color=pink,author=Mikkel]{Husk nu det gode humør ;)}
-\todo[inline, color=yellow,author=Anders]{Vi tager den i morgen ;)}
 
 
 Figur \ref{fig:spi_to_fpga} viser indholdet af datawords der bliver sendt fra Mikrocontrolleren. 
