Tilføjet henvisning i FPGA..

--- a/Rapport/content/FPGA.tex
+++ b/Rapport/content/FPGA.tex
@@ -10,9 +10,8 @@ Følgende opgaver til FPGA'en er fastsat af projektbeskrivelsen:
 	\item Optælling af motorernes rotationer vha. encoders på PTS.
 \end{itemize}
 
-FPGA'en er i projeket et BASYS board\footnote{DIGILENT BASYS 2}, der programmeres ved brug af VHDL\footnote{VHSIC Hardware Description Language}.
-\todo[inline, author=Michael]{Bør vi have en kort beskrivelse af boardet? Hvilken FPGA der sidder på, antallet af gates/LUTs osv?}
-\todo[inline,color=pink, author= Mikkel]{Synes jeg ikke er nødvendigt, da vi ikke aktivt har valgt den eller har nogle specielle krav til den.}
+FPGA'en er i projeket et BASYS board\footnote{Datablad \citep{basys2}}, der programmeres ved brug af VHDL\footnote{VHSIC Hardware Description Language}.
+
 \subsection{Foretagede valg i opbygning af FPGA funktionalitet}
 Eftersom de fleste krav til FPGAeFPGA'enn er givet af projektbeskrivelsen, er der ikke 
 lavet noget større analysearbejde af FPGA'ens funktionalitet. Undervejs i 
