--- a/Rapport/litteraturliste.bib
+++ b/Rapport/litteraturliste.bib
@@ -161,3 +161,9 @@ url = {http://en.wikipedia.org/w/index.php?title=Shotgun&oldid=608802310}
 }
 
 
+@ONLINE{basys2,
+author = {{Digilent Inc.}},
+title = {Digilent Basys2 Board Reference Manual},
+year = {2010},
+url = {http://www.digilentinc.com/Data/Products/BASYS2/Basys2_rm.pdf}
+}
