--- a/Rapport/graphics/openloop1.tex
+++ b/Rapport/graphics/openloop1.tex
@@ -4,7 +4,7 @@
 \node [output, right of=Gm] (output){};
 
 \draw [draw,->] (input) -- node {\footnotesize $d.c.(t)$} (PWM);
-\draw [draw,->] (Gm) -- node[name=theta] {\footnotesize $\theta\left(t\right)$} (output);
+\draw [draw,->] (Gm) -- node[name=theta] {\footnotesize $\phi\left(t\right)$} (output);
 
 \draw [draw,->] (PWM) -- (Gm);
 
@@ -24,7 +24,7 @@
 \node [output, right of=Gm1] (output1){};
 
 \draw [draw,->] (input1) -- node {\footnotesize $d.c.(t)$} (PWM1);
-\draw [draw,->] (Gm1) -- node {\footnotesize $\phi\left(t\right)$} (output1);
+\draw [draw,->] (Gm1) -- node {\footnotesize $\theta\left(t\right)$} (output1);
 
 \draw [draw,->] (PWM1) -- (Gm1);
 
