Rettet todo's, ændret lidt struktur

--- a/Rapport/content/evaluering.tex
+++ b/Rapport/content/evaluering.tex
@@ -1,5 +1,5 @@
 \part{Evaluering}
-Denne del opsummeres projektarbejdet gennem diskussion og konklusion. 
+Denne del opsummerer projektarbejdet gennem diskussion og konklusion. 
 
 \input{./content/diskussion}
 \include{./content/konklusion}
