--- a/Rapport/content/kontrollerdesign.tex
+++ b/Rapport/content/kontrollerdesign.tex
@@ -260,4 +260,9 @@ Da input-signalet er samplet ved 120 [Hz] vil det oprindelige spektrum, centrere
 spejles ved heltalsmultipla af 120 [Hz]. Disse spejlbilleder af det oprindelige spektrum vil være
 indeholdt i det upsamplede signal, hvis det ikke filtreres. 
 En filtrering vil dog give signalet en forsinkelse før det når regulatoren,
-og dette bidrager til fejlen. Det vælges derfor ikke at anvende et upsampling-filter.
+og dette bidrager til fejlen. Det vælges derfor ikke at anvende et 
+upsampling-filter.
+
+\section{Valg af regulatortype}
+
+\todo[inline,author=ALLE]{Grunden for valg af PID-controller.}
