--- a/Rapport/content/kravspecifikation.tex
+++ b/Rapport/content/kravspecifikation.tex
@@ -60,8 +60,7 @@ der er lavere end tiden \(t_{s}\) angivet i ligning, \ref{eq:ks:settlingtime}.
 
 Haglene fra et 12 gauge haglgevær med Skeet Choke spredes så de dækker et område
 med en diameter på 1,32 [m] på en afstand på 37 [m], \citep[Pattern and choke]{patternandchoke}.
-\todo[inline, color = pink,author = Mikkel]{ Ligning 2.4 gælder vel kun ved antagelse af lineær spredning?}
-Spredningsvinklen er dermed givet ved ligning \ref{eq:ks:spredning}.
+Spredningsvinklen er, med en antagelse om lineær spredning, givet ved ligning \ref{eq:ks:spredning}.
 \begin{align}
   Spredning &= \tan \left(\frac{1,32}{2} / 37 \right) \\
   &= 2,04 \degree
