--- a/Rapport/content/systemidentification.tex
+++ b/Rapport/content/systemidentification.tex
@@ -1,6 +1,8 @@
 \part{System identifikation}
-Denne del gennemgås den teoretiske udredning af systemet. Denne del lægger vægt på den matematiske model af PTS, hvorefter transferfunktionerne bliver diskretiseret således at de kan anvendes i det diskrete domæne. Ydermere beskrives hvilken proces, der benyttes til at designe regulatoren.
-Afslutningsvis beskrives koordinattransformationen fra kartesisk til sfærisk
+Denne del gennemgår den teoretiske udredning af systemet. 
+Denne del lægger vægt på den matematiske model af PTS, hvorefter overføringsfunktionerne bliver diskretiseret således, at de kan anvendes i det diskrete domæne. 
+Ydermere beskrives hvilken proces, der benyttes til at designe regulatoren.
+Afslutningsvis beskrives koordinattransformationen fra kartesisk til sfærisk.
 
 \input{./content/PTS}
 \include{./content/kontrollerdesign}
