--- a/Rapport/content/regulering.tex
+++ b/Rapport/content/regulering.tex
@@ -1,3 +1,3 @@
-\part{Regulering}
+\part{Justering af regulator}
 I denne del optimeringes koefficienterne i reguleringssløjferne for PTS.
 \input{./content/PID_optimering}
