1. forsøg på indledning

--- a/Rapport/content/indledning.tex
+++ b/Rapport/content/indledning.tex
@@ -1,2 +1,9 @@
 \section*{Indledning}
-\todo[inline,author=ALLE]{Mangler at blive skrevet}
+Trackingsystemer spiller en stadig større rolle i vores hverdag og ses ofte i gadebilledet i form 
+af f.eks. overvågningskameraer.
+Fælles for mange af sådanne systemer er, at de er styret af pan \& tilt systemer. 
+I dette projekt udvikles et pan \& tilt trackingsystem, som følger en lerdues bevægelse i 
+luften. For at udvikle et sådant system skal en passende regulator designes og denne skal implementeres
+på en mikrocontroller. 
+Desuden skal kommunikation mellem pan \& tilt systemet og mikrocontrolleren oprettes.
+\todo[inline,color = pink, author= Mikkel]{1. forsøg på indledning.}
