added matlab open loop data

--- a/Rapport/content/PTS.tex
+++ b/Rapport/content/PTS.tex
@@ -209,3 +209,12 @@ Forsøget blev udført syv gange.
 
 Figur \ref{fig:openloop2} viser de syv målte åbensløjferesponser (markeret med rødt)
 og de syv teoretiske åbensløjferesponser (markeret med blåt).
+\begin{figure}[th!]
+	\centering
+	\includegraphics[width=1\textwidth]{./graphics/openloop2.eps}
+	\caption[Tilt åbensløjferespons, målt vs. teoretisk]
+		{Tilt åbensløjferespons, målt vs. teoretisk.
+		Markeret med rødt er den målte respons for alle syv målinger,
+		mens den teoretiske respons for de samme syv inputs er markeret med blåt.}
+	\label{fig:openloop2}
+\end{figure}
