--- a/Rapport/content/PID_optimering.tex
+++ b/Rapport/content/PID_optimering.tex
@@ -1,13 +1,10 @@
-\section{Controller tuning}
-\label{sec:PID}
+%\section{Controller tuning}
+%\label{sec:PID}
+\section{Ziegler-Nichols metode}
+Til bestemmelsen af regulator-koefficienterne bruges den analytiske fremgangsmåde "Ziegler-Nichols Tuning Methode", \citep[Kap. 7.6]{reg_modern_control_systems}. 
+Metoden tager udgangspunkt i systemets lukket sløjfe respons. 
 
-
-\subsection{Ziegler-Nichols Tuning Methode}
-Til bestemmelsen af controller-koefficienterne bruges den analytiske fremgangsmåde "Ziegler-Nichols Tuning Methode", \citep[Kap. 7.6]{reg_modern_control_systems}. 
-Metoden tager udgangspunkt i systemets "close loop" respons. 
-
-
-Tabel \ref{tb:ZieglerNichols} beskriver hvordan controller-koefficienterne bestemmes.
+Tabel \ref{tb:ZieglerNichols} beskriver hvordan regulator-koefficienterne bestemmes.
 
 \begin{figure}[th!]
 \centering
@@ -22,10 +19,11 @@ Tabel \ref{tb:ZieglerNichols} beskriver hvordan controller-koefficienterne beste
 \label{tb:ZieglerNichols}
 \end{figure}
 
-hvor \(K_U\) er forstærkningen og \(T_U\) er den tilhørende oscillations periode hvorved CL-systemet opnår instabilitet.
+hvor \(K_U\) er forstærkningen og \(T_U\) er den tilhørende oscillations periode hvorved lukket sløjfe systemet opnår marginalt stabilitiet.
 
 \subsubsection{Pan- og tilt controller-keofficienter}
-\(K_u\) og \(T_u\) er bestemt ud fra hhv. pan og tilts diskretiserende transferfunktioner, ligning \ref{eq:pantiltdiskretiserendetf}. Der blev lavet et loop i MATLAB, som løb forstærkningsintervallet igennem for de to transferfunktioner.
+\(K_u\) og \(T_u\) er bestemt ud fra hhv. pan og tilts diskretiserende overføringsfunktioner, ligning \ref{eq:pantiltdiskretiserendetf}. 
+Der blev lavet et loop i MATLAB, som løb forstærkningsintervallet igennem for de to transferfunktioner.
 \begin{itemize}
 \itemsep1pt
 \item \(K_{u-tilt} = 37,24\)
@@ -34,7 +32,7 @@ hvor \(K_U\) er forstærkningen og \(T_U\) er den tilhørende oscillations perio
 \item \(T_{u-pan} = 34,207\cdot 10^{-3}\) [s] 
 \end{itemize}
 
-Controller-koefficienterne bestemt ud fra den ultimative forstærkning og tilhørende periode, ses i tabel \ref{tb:ZieglerNichols1}.
+Regulator-koefficienterne bestemt ud fra den ultimative forstærkning og tilhørende periode, ses i tabel \ref{tb:ZieglerNichols1}.
 
 \begin{figure}[th!]
 \centering
