--- a/Rapport/master_doc.tex
+++ b/Rapport/master_doc.tex
@@ -32,6 +32,7 @@
 \include{./content/systemidentification}
 \include{./content/implementering}
 \include{./content/regulering}
+\include{./content/test}
 \include{./content/evaluering}
 %%%%%%%%%%%% Litteratur %%%%%%%%%%%%
 \bibliography{litteraturliste}
