--- a/Rapport/content/application.tex
+++ b/Rapport/content/application.tex
@@ -3,9 +3,9 @@
 \pagenumbering{arabic}
 \setcounter{page}{1}
 \part{Applikation}
-I denne del af rapporten beskrives i hvilken sammenhæng Pan \& Tilt Systemet (PTS) 
-ønskes brugt. Situationen analyseres og krav til systemet fastlægges. Sidst 
-gives et overblik over det samlede projekt samt opdelingen af opgaver.
+I denne del af rapporten beskrives sammenhængen i hvilken Pan \& Tilt Systemet (PTS) 
+ønskes brugt. Applikationen analyseres og krav til systemet fastlægges. Sidst 
+gives et overblik over det samlede projekt samt opdelingen i opgaver.
 
 \input{./content/problemformulering}
 \include{./content/kravspecifikation}
