--- a/Rapport/content/indledning.tex
+++ b/Rapport/content/indledning.tex
@@ -7,3 +7,4 @@ luften. For at udvikle et sådant system skal en passende regulator designes og 
 på en mikrocontroller. 
 Desuden skal kommunikation mellem pan \& tilt systemet og mikrocontrolleren oprettes.
 \todo[inline,color = pink, author= Mikkel]{1. forsøg på indledning.}
+\todo[inline,color = red, author=Mikael]{Husk en henvisning til projektoplægget!!!!}
