--- a/Rapport/content/ansvarsomraader.tex
+++ b/Rapport/content/ansvarsomraader.tex
@@ -42,3 +42,4 @@ Anders&\\
 \caption*{Viser fordelingen af ansvarsområder.}            
 \end{table}\\~\\ 
 Det skal understreges, at tabellen er vejledende og at hele gruppen har været med over alle områder.
+\todo[inline,author=Mikael]{trololol skriv ansvarsområder}
