--- a/Rapport/content/indholdsfortegnelse.tex
+++ b/Rapport/content/indholdsfortegnelse.tex
@@ -29,7 +29,7 @@ Rapporten&/Master\_doc.pdf\\
 %\caption[Indhold på CDROM'en]{Ovenstående tabel beskriver indholdet på CDROM'en.}
 \label{tb:CD}
 \end{figure}
-
+\todo[inline,author=Mikael]{Indhold på CD-ROM'en}
 
 
 
