--- a/Rapport/content/kravspecifikation.tex
+++ b/Rapport/content/kravspecifikation.tex
@@ -1,11 +1,11 @@
 \section{Kravspecifikation}
 \label{sec:kravspecifikation}
-Kravene til systemet findes vha. reglerne for English Skeet, \citep{ES_regler},
+Kravene til systemet findes vha. reglerne for English Skeet \citep{ES_regler},
 samt det udleverede Pan \& Tilt-systems fysiske begrænsninger.
 
 
 Lerduens bane beregnes vha. de i reglerne givne værdier for affyringspunkt, forventet nedslagspunkt
-og "Target Crossing Point" (punktet, som lerduen skal passere).
+og "target crossing point" (punktet, som lerduen skal passere).
 %Med antagelsen om negligerbar luftmodstand kan en kasteparabel således udregnes ved interpolation af disse tre punkter.
 Lerduens parabel blev fundet ved interpolation af disse tre punkter. Det blev antaget at luftmodstanden var neglibar.
 Kasteparablen er givet ved ligning \ref{eq:ks:vektorparabel3d}, med origo som angivet på figur \ref{fig:ES}.
@@ -30,7 +30,9 @@ ift. xy-planet jf. figur \ref{fig:ES} og ligning \ref{eq:ks:vektorparabel3d}. \t
 
 En gennemgang af beregningerne der ligger bag kasteparablen findes i appendix \ref{sec:udregning_af_parabel}.
 
-Set ovenfra bevæger målet sig som illustreret på figur \ref{fig:para_in_xy_plane}. Punktet D er High House (affyringsstedet), Shooting Boundary (SB) og nedslagspunktet G er hhv. 40,3 [m] og 52 [m] fra High-House. PTS' er placeret i punktet B.\\
+Set ovenfra bevæger målet sig som illustreret på figur \ref{fig:para_in_xy_plane}.
+Punktet D er "high house" (affyringsstedet).
+"Shooting boundary" (SB) og nedslagspunktet G er hhv. 40,3 [m] og 52 [m] fra "high house". PTS er placeret i punktet B.\\
 \begin{figure}[h!]
 \centering
 \subfloat[Lerduens højde som funktion af afstanden til D.\label{fig:HH2D_para}]{%
@@ -45,10 +47,10 @@ Set ovenfra bevæger målet sig som illustreret på figur \ref{fig:para_in_xy_pl
 }
 \caption[Lerduens parabel i 2D]{Viser parablen af lerduens bane i 2D.}
 \end{figure}
-Det anslås, at man kan nå at affyre et skud mellem tidspunktet,
+Det anslås at man kan nå at affyre et skud mellem tidspunktet,
 hvor lerduen når toppunktet og SB, ligning \ref{eq:ks:nedslagstid}.
 I dette tidsrum skal Pan \& Tilt-systemet sigte på lerduen så geværet kan ramme.
-Der er altså et tidsmæssigt krav til reguleringen om en Settling Time for systemet,
+Der er altså et tidsmæssigt krav til reguleringen om en indsvingningstid (Settling Time) for systemet,
 der er lavere end tiden \(t_{s}\) angivet i ligning, \ref{eq:ks:settlingtime}.
 \begin{align}
   t_{s} &= 0,557 [s] &\text{(Settling Time)}
@@ -59,7 +61,7 @@ der er lavere end tiden \(t_{s}\) angivet i ligning, \ref{eq:ks:settlingtime}.
 \end{align}
 
 Haglene fra et 12 gauge haglgevær med Skeet Choke spredes så de dækker et område
-med en diameter på 1,32 [m] på en afstand på 37 [m], \citep[Pattern and choke]{patternandchoke}.
+med en diameter på 1,32 [m] på en afstand på 37 [m] \citep[Pattern and choke]{patternandchoke}.
 Spredningsvinklen er, med en antagelse om lineær spredning, givet ved ligning \ref{eq:ks:spredning}.
 \begin{align}
   Spredning &= \tan \left(\frac{1,32}{2} / 37 \right) \\
@@ -67,10 +69,10 @@ Spredningsvinklen er, med en antagelse om lineær spredning, givet ved ligning \
   \label{eq:ks:spredning}
 \end{align}
 Der er altså et krav om at geværet peger på lerduen med en præcision på \(\pm 1,02 \degree\).
-Dette krav gælder for både pan-rammens vinkel (\(\phi\)) og tilt-rammens vinkel (\(\theta\)).
-For en 1-radian reference giver dette altså en maksimal steady state tracking error (SSE) på 1,78 \%.
-\todo[inline, author=Michael]{Den virkelige sammenhænge er mere kompleks: Hvis både pan \& tilt rammen peger 1\degree ved siden af, er den samlede afvigelse vel over 1,02\degree}
-\todo[inline, color = pink, author = Mikkel]{Hvad mening giver det at kigge på 1 radian reference og kan man virkelig kalde det SSE?}
+%Dette krav gælder for både pan-rammens vinkel (\(\phi\)) og tilt-rammens vinkel (\(\theta\)).
+For en 1-radian reference giver dette altså en maksimal tracking error (SSE) på 1,78 \%.
+%\todo[inline, author=Michael]{Den virkelige sammenhænge er mere kompleks: Hvis både pan \& tilt rammen peger 1\degree ved siden af, er den samlede afvigelse vel over 1,02\degree}
+%\todo[inline, color = pink, author = Mikkel]{Hvad mening giver det at kigge på 1 radian reference og kan man virkelig kalde det SSE?}
 
 Tilt-rammen kan bevæge sig frit,
 men pan-rammen kan pga. en stopklods kun rotere \(154 \degree\)\footnote{Målt eksperimentielt.}.
