--- a/Rapport/content/problemformulering.tex
+++ b/Rapport/content/problemformulering.tex
@@ -4,15 +4,14 @@
 PTS skal opbygges til tracking og nedskydning af en lerdue i English Skeet (ES).
 
 PTS dimensioneres til en konkurrence i ES og er afgrænset til et enkelt tilfælde:
-Afskydning fra ”High-House” med PTS placeret på station 4, jf. figur \ref{fig:ES}.
+Afskydning fra ”high house” med PTS placeret på station 4, jf. figur \ref{fig:ES}.
 \begin{figure}[th!]
 \centering
 \includegraphics[width=1\textwidth]{./graphics/skeet_diagram_cropped_axes}
 \caption[Skitse af ES]{Optegning af skyttepositioner samt lerduens flugt fra de to affyringsstationer hhv. "High House", "Low House". PTS er placeret på position 4.}
 \label{fig:ES}
 \end{figure}	
-PTS' udgangsposition er at pan-rammen står vinkelret på x-aksen jf. figur \ref{fig:ES},
-og at tilt-rammen er lodret (parallel med yz-planet).
+PTS' udgangsposition er at systemet peger mod "high house" hvorfra lerduen afskydes.
 
 
 %GL:
@@ -23,16 +22,17 @@ og at tilt-rammen er lodret (parallel med yz-planet).
 %Da man har to skud til rådighed, er det et krav at trackingen foretaget af PTS har stabiliseret sig på lerduen
 %i tide, så man kan nå at affyre to skud. 
 
-For at kunne skyde lerduen, er et tænkt masseløst gevær placeret i skæringspunktet mellem pan- og tilt-akserne. Geværet er monteret vinkelret på tilt-planet. 
-Lerduen skal skydes jf. reglerne for ES, dvs. inden lerduen når "shooting boundary", figur \ref{fig:ES}.
+Til nedskydning af lerduen er et tænkt masseløst gevær placeret i skæringspunktet mellem pan- og tilt-akserne.
+Geværet er monteret vinkelret på tilt-planet. 
+Lerduen skal skydes iht. reglerne for ES, dvs. inden lerduen når "shooting boundary", figur \ref{fig:ES}.
 \todo[inline, author=Michael]{En figur der viser geværet på PTS ville være meget velkommen}
 %\todo[inline, author=Michael]{Jeg har udkommenteret sætningen om 2 skud, da vi jævnfør paragraf 4.21 i regelsættet kun må affyre et skud per lerdue. Desuden er resten afsnittet omskrevet. (Det står dog gemt i kommentarerne)}
 
 Det tænkte gevær er et 12 gauge haglgevær med Skeet Choke.
 
-Lerduens koordinater er i det kartesiske koordinatsystem som vist på figur \ref{fig:ES}
+Lerduens koordinater i det kartesiske koordinatsystem som vist på figur \ref{fig:ES}
 vil med en frekvens på 120 [Hz] blive givet som input til systemet. 
-Hvor disse stammer fra er uden for projektafgrænsningen. 
+Hvor disse koordinater stammer fra er uden for projektafgrænsningen.
 
 Som angivet i projektoplægget skal reguleringen foregå på en mikrocontroller,
 mens motorpositionsbestemmelse skal foregå på en FPGA.
