--- a/Rapport/content/projekt_overblik.tex
+++ b/Rapport/content/projekt_overblik.tex
@@ -18,7 +18,7 @@ Projektoplægget stiller ydermere følgende krav til implementeringen:
   \item Regulatorerne skal implementeres på én microprocessor.
   \item Der skal benyttes SPI kommunikationen imellem microprocessoren og FPGA’en.
   \item FPGA’en skal styre PWM signalerne til motorerne.
-  \item FPGA’en skal benyttes til at bestemmes motorernes position via encoderne.
+  \item FPGA’en skal benyttes til bestemmelse af motorernes position vha. encoderne.
 \end{itemize}
 
 \bigskip
@@ -31,3 +31,4 @@ Projektoplægget stiller ydermere følgende krav til implementeringen:
 \caption[Principskitse af PTS]{Principskitse af PTS med farvekoder.}
 \label{fig:overview_openloop_PTS}
 \end{figure}
+\todo[inline,author=Mikael]{En forklaring af farvekoderne... Det er fint nok de er der, men de skal vel også andet end bare nævnes?}
