--- a/Rapport/content/PTS.tex
+++ b/Rapport/content/PTS.tex
@@ -193,8 +193,12 @@ står i ligningerne \ref{eq:transpantilt0}, og de er illustreret i figur \ref{fi
 
 Åbensløjfeoverføringsfunktionerne \(G_{pan}\) og \(G_{tilt}\) danner udgangspunktet
 for analysen der hører til designet af reguleringssløjferne.
+I afsnit \ref{subsec:verifikation} nedenfor diskuteres overføringsfunktionernes nøjagtighed,
+og der gives forslag til forbedring af modellen ift. det fysiske system som det fungerer
+i praksis.
 
 \subsubsection{Verifikation}
+\label{subsec:verifikation}
 Åbensløjferesponsen af Tilt-systemet er blevet målt og sammenlignet med den teoretiske respons
 som forudsagt af den fundne overføringsfunktion \(G_{tilt}\).
 Grunden til, åbensløjferesponsen kun er blevet målt for Tilt er, at rammen kan rotere frit,
