--- a/Rapport/content/ansvarsomraader.tex
+++ b/Rapport/content/ansvarsomraader.tex
@@ -43,3 +43,4 @@ Anders&\\
 \end{table}\\~\\ 
 Det skal understreges, at tabellen er vejledende og at hele gruppen har været med over alle områder.
 \todo[inline,author=Mikael]{trololol skriv ansvarsområder}
+\todo[inline, author=Michael]{Yes, nul ansvar til mig :D}
