--- a/Rapport/content/ansvarsomraader.tex
+++ b/Rapport/content/ansvarsomraader.tex
@@ -37,6 +37,8 @@ Mikael&\\
 Nikolaj&\\
 &\\[6pt] \hline
 Anders&\\
+&\\[6pt] \hline
+Hatten ;) &\\
 &\\
 \end{tabular}     
 \caption*{Viser fordelingen af ansvarsområder.}            
