Rettet ansvarsområder

--- a/Rapport/content/ansvarsomraader.tex
+++ b/Rapport/content/ansvarsomraader.tex
@@ -38,8 +38,8 @@ Nikolaj&\\
 &\\[6pt] \hline
 Anders&\\
 &\\[6pt] \hline
-Hatten ;) &\\
-&\\
+Michael & All ze errorz\\
+&\\ 
 \end{tabular}     
 \caption*{Viser fordelingen af ansvarsområder.}            
 \end{table}\\~\\ 
