--- a/Rapport/content/indholdsfortegnelse.tex
+++ b/Rapport/content/indholdsfortegnelse.tex
@@ -30,6 +30,7 @@ Rapporten&/Master\_doc.pdf\\
 \label{tb:CD}
 \end{figure}
 \todo[inline,author=Mikael]{Indhold på CD-ROM'en}
+\todo[inline, color=pink, author = Mikkel]{Ændr' Parts -  det er ikke dansk. Kunne ikke selv finde ud af det.}
 
 
 
